add simple UserProfile API
